Fix overflow landscape

--- a/src/app/box/box.component.css
+++ b/src/app/box/box.component.css
@@ -6,9 +6,9 @@
     align-items: stretch;
     
     min-height: 100vh;
-    border: 8px solid rgb(100, 48, 11);
+    border: 8px solid rgb(49, 22, 2);
 
-    background-color: rgb(233, 143, 40);
+    background-color: rgb(93, 93, 93);
 }
 
 
@@ -19,7 +19,8 @@ ul {
 }
 
 li {
-    margin: 5%;
+    margin: 2%;
+    padding: 2%;
     /* height: 40vh; */
     flex: 2;
     border: 4px solid rgb(100, 48, 11);
@@ -27,8 +28,8 @@ li {
 
 span {
     /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
-    font-family: 'Lobster';
-    color: rgb(102, 101, 101);
+    font-family: 'Lobster', 'Trebuchet MS';
+    color: rgb(209, 204, 204);
     font-size: 6em;
     
     /* position: relative;
